--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -130,6 +130,9 @@
 										<a href="{{ path('app_mes_formations') }}" class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Mes Formations</a>
 									</li>
 									<li>
+										<a href="{{ path('app_emploi_mesemploi') }}" class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Mes Emplois</a>
+									</li>
+									<li>
 										<a href="{{ path('app_stage_index') }}" class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Mes Stages</a>
 									</li>
 
