--- a/templates/reclamation/front.html.twig
+++ b/templates/reclamation/front.html.twig
@@ -67,9 +67,9 @@
                                             </td>
                                             
                                            <td class="px-6 py-4 whitespace-no-wrap">
-                    <a href="{{ path('app_reclamation_edit', {'idReclamation': reclamation.idReclamation}) }}" class="font-medium  hover:underline ml-3">edit</a>
+                    <a href="{{ path('app_reclamation_edit', {'idReclamation': reclamation.idReclamation}) }}" class="font-medium  hover:underline ml-3">Modifier</a>
                     <td class="px-6 py-4 whitespace-no-wrap">
-                    <a href="{{ path('app_reclamation_messages', {'idReclamation': reclamation.idReclamation}) }}" class=" hover:underline ml-3">messages</a>
+                    <a href="{{ path('app_reclamation_messages', {'idReclamation': reclamation.idReclamation}) }}" class=" hover:underline ml-3">Messages</a>
                 </td>
                                         </tr>
                                     {% endfor %}
