--- a/templates/user/index.html.twig
+++ b/templates/user/index.html.twig
@@ -108,6 +108,27 @@
                         </div>
                     </div>
                 </div>
+                <div class="bg-white p-3 border-t-4 border-green-400">
+
+                    <ul
+                            class="bg-gray-100 text-gray-600 hover:text-gray-700 hover:shadow py-2 px-3 mt-3 divide-y rounded shadow-sm">
+                        {% if not user.note %}
+                        <li class="flex items-center py-3">
+                            <span>Passez votre QUIZ !</span>
+                            <span class="ml-auto">
+                                <span class="bg-green-500 py-1 px-2 rounded text-white text-sm">
+                                    <a class="cursor-pointer" href="{{ path('app_user_userquiz') }}">COMMENCER</a></span></span>
+                        </li>
+                            {% else %}
+                                <li class="flex items-center py-3">
+                                    <span>Votre note dans le Quiz</span>
+                                    <span class="ml-auto">
+                                <span class="bg-green-500 py-1 px-2 rounded text-white text-sm">
+                                    {{ user.note }}</span></span>
+                                </li>
+                        {% endif %}
+                    </ul>
+                </div>
                 <!-- End of friends card -->
             </div>
             <!-- Right Side -->
