--- a/templates/emploi/CandidatsEmploi.html.twig
+++ b/templates/emploi/CandidatsEmploi.html.twig
@@ -13,6 +13,7 @@
                     <th class="py-3 px-4 uppercase font-semibold text-sm">Email</th>
                     <th class="py-3 px-4 uppercase font-semibold text-sm">Numéro</th>
                     <th class="py-3 px-4 uppercase font-semibold text-sm">Note du Quizz</th>
+                    <th class="py-3 px-4 uppercase font-semibold text-sm"></th>
 
                 </tr>
                 </thead>
@@ -25,10 +26,16 @@
                         <td class="py-3 px-4">{{ candidat.numTel }}</td>
                         <td class="py-3 px-4">
                             {% if candidat.note %}
-                                {{ candidat.note }}
+                            {{ candidat.note }}
                             {% else %}
                                 Le candidat n'a pas fait le Quiz
-                            {% endif %}
+                                {% endif %}
+                        </td>
+                        <td class="py-3 px-4">
+                            <a href="{{ path('app_zoom', {'idEmploi': idEmploi, 'idUser': candidat.idUser}) }}" class="ml-auto inline-flex items-center justify-center self-end px-3 py-3 text-base font-medium text-center text-white bg-blue-700 rounded-lg hover:bg-blue-800">
+                                Planifier une réunion
+                                <svg class="w-5 h-5 ml-2 -mr-1" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M10.293 3.293a1 1 0 011.414 0l6 6a1 1 0 010 1.414l-6 6a1 1 0 01-1.414-1.414L14.586 11H3a1 1 0 110-2h11.586l-4.293-4.293a1 1 0 010-1.414z" clip-rule="evenodd"></path></svg>
+                            </a>
                         </td>
                     </tr>
                 {% endfor %}
