--- a/templates/emploi/edit.html.twig
+++ b/templates/emploi/edit.html.twig
@@ -4,14 +4,14 @@
 {% endblock %}
 
 {% block content %}
-	<h1 class="mb-4 text-4xl font-extrabold leading-none tracking-tight text-gray-900 md:text-5xl lg:text-6xl dark:text-white text-center">
-		Edit
-		<span class="text-blue-600 dark:text-blue-500">Emploi</span>
+	<h1 class="mb-4 text-4xl font-extrabold leading-none tracking-tight  md:text-5xl lg:text-6xl text-white text-center">
+		Modifier
+		<span class="text-blue-900">Emploi</span>
 	</h1>
 
 	{{ include('emploi/_form.html.twig', {'button_label': 'Update'}) }}
 
-	<a href="{{ path('app_emploi_index') }}" class="block text-gray-900  font-bold py-2 px-4 hover:text-gray-800 bg-blue-300 mt-3">back to list</a>
+	<a href="{{ path('app_emploi_mesemploi') }}" class="block text-gray-900  font-bold py-2 px-4 hover:text-gray-800 bg-blue-300 mt-3">Retour</a>
 
 
 {% endblock %}
