--- a/templates/emploi/new.html.twig
+++ b/templates/emploi/new.html.twig
@@ -4,9 +4,9 @@
 {% endblock %}
 
 {% block content %}
-	<h1 class="mb-4 text-4xl font-extrabold leading-none tracking-tight text-gray-900 md:text-5xl lg:text-6xl dark:text-white text-center">
+	<h1 class="mb-4 text-4xl font-extrabold leading-none tracking-tight md:text-5xl lg:text-6xl text-white text-center">
 		Ajouter
-		<span class="text-blue-600 dark:text-blue-500">un Emploi</span>
+		<span class="text-blue-900">un Emploi</span>
 
 	</h1>
 
