--- a/templates/reclamation/edit.html.twig
+++ b/templates/reclamation/edit.html.twig
@@ -8,22 +8,26 @@
 						class="mb-4 text-4xl font-extrabold leading-none tracking-tight text-white md:text-5xl lg:text-6xl ">
 					<span class="text-blue-400 ">Modification de votre Reclamation</span>
 				</h1>
-			
+
 			</div>
  {% for flashMessage in app.session.flashbag.get('warning') %}
             <div class="alert alert-info bg-red-100 flex flex-col w-full items-center justify-center text-center border border-red-400 text-red-700   py-4 mb-6 font-medium rounded relative shadow-2xl">
                 {{ flashMessage }}</div>
         {% endfor %}
-     
-   
+
+
     <div class="container mx-auto px-4  ">
 
              <div class="my-4 md:px-12 flex flex-col  gap-10  mr-auto rounded-2xl shadow-2xl p-5">
-                 
+
   {{ include('reclamation/_form.html.twig', {'button_label': 'Update', 'button_class': 'bg-blue-400 hover:bg-blue-500 text-white font-bold rounded-md shadow-md transition-all duration-200'}) }}
-<a href="{{ path('app_reclamation_front') }}" class="inline-block mt-4 px-4 py-2 bg-gray-800 text-white font-bold rounded">Back to List</a>
+<div>
+    <a href="{{ path('app_reclamation_front') }}" class="inline-block mt-4 px-4 py-2 bg-gray-800 text-white font-bold rounded">Retour</a>
 
-    
+</div>
 
-   
+
+</div>
+    </div>
+
 {% endblock %}
