--- a/templates/stage/index.html.twig
+++ b/templates/stage/index.html.twig
@@ -77,7 +77,7 @@
 							</td>
 
 							<td class="px-6 py-4">
-								<a href="{{ path('app_stage_candidats', {'idStage': stage.idStage}) }}" class="font-medium text-blue-600 dark:text-blue-500 hover:underline">Candidats</a>
+								<a href="{{ path('app_stage_candidats', {'idStage': stage.idStage}) }}" class="font-medium text-blue-600 dark:text-blue-500 hover:underline">Liste des Candidats</a>
 							</td>
 						</tr>
 					{% endfor %}
